04-Project-Code/EKS-CLUSTER-LOAD-BALANCER/Backend-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-app-pod
spec:
  containers:
  - name: app-container
    image: faisalkhan45/backend-app
