04-Project-Code/EKS-CLUSTER-LOAD-BALANCER/promtail-daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:2.3.0
          args:
            - "-config.file=/etc/promtail/promtail-config.yaml"
          volumeMounts:
            - name: promtail-config
              mountPath: /etc/promtail
            - name: varlogs
              mountPath: /var/log
            - name: positions
              mountPath: /run/promtail
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /ready
              port: 9080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: 9080
            initialDelaySeconds: 10
            periodSeconds: 20
          securityContext:
            runAsUser: 0  # Run as root to allow access to restricted files
            runAsGroup: 0 # Run as root group
            privileged: true # Optional: Uncomment if needed to run in privileged mode
      volumes:
        - name: promtail-config
          configMap:
            name: promtail-config
        - name: varlogs
          hostPath:
            path: /var/log
            type: DirectoryOrCreate
        - name: positions
          emptyDir: {}
