04-Project-Code/EKS-CLUSTER-LOAD-BALANCER/loki-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: monitoring
spec:
  ports:
    - port: 3100
      targetPort: 3100
      nodePort: 30091  # This exposes Loki on port 30091
  selector:
    app: loki
  type: NodePort
