04-Project-Code/EKS-CLUSTER-LOAD-BALANCER/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    alb.ingress.k8s.aws/certificate-arn: arn:aws:acm:eu-north-1:195275659054:certificate/cf1961af-d633-4d11-9c2a-c7af2bac518b
    alb.ingress.k8s.aws/scheme: internet-facing
spec:
  ingressClassName: nginx
  rules:
    - host: mohdfaisalkhan.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
    - host: www.mohdfaisalkhan.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
